# celery-boilerplate

./: .gitignore  README.md  manage.py  pyproject.toml
celery_boilerplate/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
fun_app/: tasks.py
