[tool.poetry]
name = "celery-boilerplate"
version = "0.1.0"
description = ""
authors = ["nightwarriorftw <amanv1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
celery = "^5.0.5"
Django = "^3.1.7"
redis = "^3.5.3"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
